kubernetes/pgadmin/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  ports:
    - name: "1234"
      port: 1234
      targetPort: 80
  selector:
    io.kompose.service: pgadmin
status:
  loadBalancer: {}
